# ChallengeFastAPI

./: README.md  pyproject.toml
app/: __init__.py  main.py
app/routers/: challenge.py  feedback.py
app/services/: challenge_service.py  email_service.py
app/static/css/: style.css
app/static/js/: feedback.js
app/templates/: base.html  challenge_overview.html  challenge_step1.html  challenge_step2.html  challenge_step3.html  challenge_step4.html  challenge_step5.html  challenge_step6.html  challenge_step7.html  challenge_step8.html  challenge_step9.html  feedback_email.html
app/utils/: constants.py  regex_patterns.py
