[tool.poetry]
name = "challenge"
version = "0.1.0"
description = ""
authors = ["Guilherme Lima <guilherme.pereira@provafacilnaweb.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
jinja2 = "^3.1.4"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 121
target-version = "py312"

select = [
    "E", # pycodestyle
    "F", # pyflakes
    "UP", # pyupgrade,
    "I", # isort
]
exclude = ["_migrations", "settings", "__pycache__", "*.ini"]
ignore = ["E211", "E999", "E203"]
